--- a/.github/workflows/macOS.yml
+++ b/.github/workflows/macOS.yml
@@ -1,4 +1,4 @@
-name: VNC
+name: VNC-macOS
 
 on:
   workflow_dispatch:
@@ -6,55 +6,68 @@ on:
 jobs:
   secure-vnc:
     runs-on: macos-latest
-    timeout-minutes: 3600
+    timeout-minutes: 360
 
     steps:
-      - name: Create VNC User with Secure Password
+      - name: Set Password for runner user
+        shell: bash
         run: |
           # Tạo mật khẩu random
           PASS=$(LC_ALL=C tr -dc 'A-Za-z0-9!@#$%^&*()_+=' < /dev/urandom | head -c 16)
+          
+          # Đặt mật khẩu cho user runner
           echo "runner:$PASS" | sudo chpasswd
+          
           echo "VNC_PASS=$PASS" >> $GITHUB_ENV
+
       - name: Enable VNC (Screen Sharing)
+        shell: bash
         run: |
           # Bật Remote Management (Apple Remote Desktop)
           sudo /System/Library/CoreServices/RemoteManagement/ARDAgent.app/Contents/Resources/kickstart \
             -activate -configure -access -on \
             -users runner -privs -all -restart -agent
 
-          # Bật VNC với password (MacOS lưu ở com.apple.VNCSettings)
+          # Tạo password hash cho VNC
           PASS=$VNC_PASS
           ENCODED=$(python3 -c "import hashlib,sys; p=sys.argv[1].encode(); h=hashlib.md5(p).digest(); print(h[:8].hex())" "$PASS")
-          echo $ENCODED | xxd -r -p | sudo defaults write /Library/Preferences/com.apple.VNCSettings VNCPassword -data -
-          
+
+          echo $ENCODED | xxd -r -p | \
+            sudo defaults write /Library/Preferences/com.apple.VNCSettings VNCPassword -data -
+
           # Mở firewall cho VNC (port 5900)
           sudo /usr/libexec/ApplicationFirewall/socketfilterfw --add /System/Library/CoreServices/RemoteManagement/ARDAgent.app
           sudo /usr/libexec/ApplicationFirewall/socketfilterfw --unblockapp /System/Library/CoreServices/RemoteManagement/ARDAgent.app
 
       - name: Install Tailscale
+        shell: bash
         run: |
           curl -fsSL https://tailscale.com/install.sh | sh
           sudo tailscale up --authkey=${{ secrets.TAILSCALE_AUTH }} --hostname=gh-macos-${GITHUB_RUN_ID}
 
       - name: Verify VNC Accessibility
+        shell: bash
         run: |
-          TS_IP=$(tailscale ip -4)
+          TS_IP=$(tailscale ip -4 | head -n1)
           echo "TAILSCALE_IP=$TS_IP" >> $GITHUB_ENV
           echo "Tailscale IP: $TS_IP"
           echo "Testing TCP port 5900..."
           nc -zv $TS_IP 5900 || (echo "Port 5900 not reachable" && exit 1)
 
-      - name: Maintain Connection
+      - name: Show Connection Info
+        shell: bash
         run: |
           echo ""
           echo "=== VNC ACCESS ==="
           echo "Address: $TAILSCALE_IP:5900"
-          echo "Username: VNC"
+          echo "Username: runner"
           echo "Password: $VNC_PASS"
           echo "=================="
           echo ""
-          
-          # Giữ cho runner chạy
+
+      - name: Keep Alive
+        shell: bash
+        run: |
           while true; do
             echo "[$(date)] VNC Active - Use Ctrl+C in workflow to terminate"
             sleep 300
