--- a/.github/workflows/macOS.yml
+++ b/.github/workflows/macOS.yml
@@ -15,8 +15,7 @@ jobs:
           # Tạo mật khẩu random
           PASS=$(LC_ALL=C tr -dc 'A-Za-z0-9!@#$%^&*()_+=' < /dev/urandom | head -c 16)
           
-          # Đặt mật khẩu cho user runner
-          echo "runner:$PASS" | sudo chpasswd
+          sudo dscl . -passwd /Users/runner "$PASS"
           
           echo "VNC_PASS=$PASS" >> $GITHUB_ENV
 
